--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.2",
+    "html2canvas": "^1.4.1",
     "localforage": "^1.10.0",
     "next": "^12.0.8",
     "next-redux-wrapper": "^7.0.5",
